# 9x9-sudoku

./: CMakeLists.txt  README.md  game.pl  gui.c
debian/: changelog  control  rules
